# garmin-uploader

./: .gitignore  .isort.cfg  .pre-commit-config.yaml  .travis.yml  LICENSE.txt  MANIFEST.in  README.md  README.txt  RELEASE.md  RELEASE.txt  VERSION  gupload.py  guploadrc_example.txt  requirements-tests.txt  requirements.txt  setup.cfg  setup.py
.github/workflows/: build.yml
garmin_uploader/: __init__.py  api.py  cli.py  help.txt  user.py  workflow.py
lib/: MultipartPostHandler.py  UploadGarmin.py  cli.py  uploader.py
tests/: conftest.py  test_api.py  test_cli.py  test_user.py  test_workflow.py
