[aliases]
test=pytest

[metadata]
description-file = README.md

[flake8]
max-line-length = 88
exclude=build,.eggs,.git,src
# Flake8 ignores multiple errors by default;
# the only interesting ignore is W503, which goes against PEP8.
# See https://lintlyci.github.io/Flake8Rules/rules/W503.html
ignore=W503
